syntax = "proto3";

package com.ms.post.proto;

option java_multiple_files = true;
option java_package = "org.ms.grpc_prop.prop";

message UserRequest{
  int64 user_id = 1;
}
message UserResponse {
  int64 user_id = 1;
  string name = 2;
}


service UserService {
  rpc getUserById(UserRequest) returns (UserResponse) {};
}